...
        }}
      />
      <Tabs.Screen
        name="holdings"
        options={{
          tabBarAccessibilityLabel: "Holdings",
          tabBarButtonTestID: "tab-holdings",
          title: "Holdings",
        }}
      />
      <Tabs.Screen
        name="progress"
        options={{
...
